overflow fix

--- a/css/main-content.css
+++ b/css/main-content.css
@@ -47,6 +47,7 @@
   justify-content: center;
   text-align: center;
   border: 1px solid red;
+  overflow: hidden;
 }
 @media (max-width: 700px) {
   .hero-section-container {
